--- a/style.css
+++ b/style.css
@@ -298,7 +298,23 @@ body.bot-responding .prompt-form #stop-response-btn{
 }
 
 .chats-container .bot-message{
-  margin: 24px auto;
+  display: flex; 
+  align-items: flex-start; 
+  gap: 10px; 
+  margin: 24px 0;
+  max-width: 75%;
+}
+
+.image-wrapper{
+  padding-top:16px;
+} 
+
+.bot-message .message-text-wrapper{
+  padding-top: 24px;
+}
+
+.bot-message.loading .message-text-wrapper{
+  padding-top: 24px;;
 }
 
 .chats-container .user-message{
