--- a/style.css
+++ b/style.css
@@ -257,10 +257,11 @@ body.bot-responding .prompt-form #stop-response-btn{
 
 /*chats */
 
-.conatiner .chats-container{
+.container .chats-container{
   display: flex;
   gap: 20px;
   flex-direction: column;
+  padding-top: 24px;
 }
 
 .chats-container .message{
@@ -441,4 +442,59 @@ body.bot-responding .prompt-form #stop-response-btn{
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+
+#test-mode-toggle-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 34px;
+  height: 20px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 20px;
+}
+
+.slider::before {
+  position: absolute;
+  content: "";
+  height: 14px;
+  width: 14px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #1d7efd;
+}
+
+input:checked + .slider::before {
+  transform: translateX(14px);
 }
